Issue#296 - Horizontal Overflow issue (#302)
* Fix overflow issue in global CSS

* Update Hero component styles for better responsiveness

* Refactor button styles in Hero component for better responsiveness

* Revert line height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  overflow-x: hidden !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
